# staircase

./: .replit  Cargo.toml  LICENSE  README.md  replit.md
.agents/memory/: MEMORY.md  crate-blueprint-directive.md  gateway-integration-pattern.md  protocol-driver-patterns.md  staircase-workspace-layout.md
attached_assets/: Pasted-Project-Name-Staircase-Objective-Build-a-production-gra_1780916065769.txt
crates/staircase-bacnet/: Cargo.toml
crates/staircase-bacnet/src/: lib.rs
crates/staircase-bacnet/tests/: loopback.rs
crates/staircase-connectors/: Cargo.toml
crates/staircase-connectors/src/: influx.rs  kafka.rs  lib.rs  mqtt.rs  nats.rs  payload.rs  postgres.rs  rest.rs  timescale.rs
crates/staircase-core/: Cargo.toml
crates/staircase-core/src/: config.rs  error.rs  lib.rs  model.rs  observability.rs  runtime.rs  testing.rs  traits.rs
crates/staircase-knx/: Cargo.toml
crates/staircase-knx/src/: lib.rs
crates/staircase-modbus/: Cargo.toml
crates/staircase-modbus/src/: lib.rs
crates/staircase-modbus/tests/: loopback.rs  mock_driver.rs
crates/staircase-mqtt/: Cargo.toml
crates/staircase-mqtt/src/: lib.rs
crates/staircase-opcua/: Cargo.toml
crates/staircase-opcua/src/: lib.rs
crates/staircase-rules/: Cargo.toml
crates/staircase-rules/src/: lib.rs
crates/staircase-storage/: Cargo.toml
crates/staircase-storage/src/: lib.rs
examples/: gateway.rs  gateway.yaml
src/: main.rs
tests/: gateway_integration.rs
