[workspace]
members = ["crates/*"]
resolver = "2"

[package]
name = "staircase"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Modular building-automation / industrial-IoT edge gateway framework in Rust"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
staircase-core = { workspace = true }

[workspace.dependencies]
staircase-core = { path = "crates/staircase-core" }

tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
