[package]
name = "staircase-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Protocol-independent core: data model, traits, config, runtime and observability for Staircase"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
